--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             ul, ol {background: rgb(243, 252, 22);
             }
             ul b {background: white;}
+            .main {
+                text-align:center;
+                color: red;}
             
                 </style>
     </head>
@@ -32,7 +35,7 @@
 <p align=center> hello world </p>
 <p align=left> hello world </p>
 
-    <h1> ok cool! <p>la la la</p> </h1>
+    <h1 class="main"> ok cool! <p>la la la</p> </h1>
 
     <ul>
     <li> <em> liste von krempel </em> </li>
